# sentinelboard-qt

./: README.md
SentinelBoard/: CMakeLists.txt
SentinelBoard/forms/: mainwindow.ui
SentinelBoard/include/: SimulationDataSource.h  datamodel.h  datasourcemode.h  idatasource.h  mainwindow.h  serialmanager.h  telemetryparser.h  telemetrysample.h
SentinelBoard/src/: SimulationDataSource.cpp  datamodel.cpp  idatasource.cpp  mainwindow.cpp  serialmanager.cpp  telemetryparser.cpp
docs/: 01-idea.md  02-materiali.md  03-protocollo-seriale.md  04-architettura.md  05-task-list.md  architettura.md
